--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 </div>
 <footer>
   <div class="container">
-    Rails Girls 2014
+    Rails Girls projekt 2014
   </div>
 </footer>
 <script src="//railsgirls.com/assets/bootstrap.js"></script>
@@ -38,6 +38,7 @@
       <ul class="nav navbar-nav">
         <li class="active"> <%= link_to "Ideas", ideas_path %></li>
         <li class="active"> <%= link_to "O mnie", pages_info_path %></li>
+        <li class="active"> <%= link_to "Kategorie", categories_path %></li>
       </ul>
     </div>
   </div>
