--- a/app/views/ideas/_form.html.erb
+++ b/app/views/ideas/_form.html.erb
@@ -23,6 +23,9 @@
     <%= f.label :picture %><br>
     <%= f.file_field :picture %>
   </div>
+  <div class="field">
+    <%= collection_select(:idea, :category_id, Category.all, :id, :name, prompt: true) %>
+  </div>
   <div class="actions">
     <%= f.submit 'stwórz pomysł', :class => "btn btn-success" %>
   </div>
