--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -5,6 +5,7 @@
     <tr>
       <th>Name</th>
       <th>Description</th>
+      <th>Category</th>
       <th>Picture</th>
       <th colspan="3"></th>
     </tr>
@@ -15,6 +16,7 @@
       <tr>
         <td><%= idea.name %></td>
         <td><%= idea.description %></td>
+        <td><%= idea.category.name if idea.category.present? %></td>
         <td><%= image_tag idea.picture_url, :width => 150 if idea.picture.present? %></td>
         <td><%= link_to 'Show', idea %></td>
         <td><%= link_to 'Edit', edit_idea_path(idea) %></td>
